k3s/transmission/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: transmission
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      run: transmission
  template:
    metadata:
      labels:
        run: transmission
    spec:
      containers:    
      - name: transmission
        image: linuxserver/transmission
        ports:
        - containerPort: 9091
          name: webui
          protocol: TCP
        - containerPort: 51413
          name: torrent-tcp
          protocol: TCP
        - containerPort: 51413
          name: torrent-udp
          protocol: UDP
        resources: {}
        volumeMounts: 
        - name: transmission-config 
          mountPath: /config 
    volumes:
    - name: transmission-config
      persistentVolumeClaim:
        claimName: pv-transmission-config
        readOnly: false
