k3s/transmission/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  namespace: mediamaven
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /transmission
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 9091
